--- a/data/stats.json.example
+++ b/data/stats.json.example
@@ -1,6 +1,7 @@
 [
   {
     "timestamp": "2024-01-01T00:00:00.000Z",
+    "examType": "cp",
     "mode": "practice",
     "score": 0,
     "correct": 0,
